--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,9 +1,12 @@
 /* This file is for your main application css. */
-@import "../node_modules/nprogress/nprogress.css";
+@import '../node_modules/nprogress/nprogress.css';
+/* @import './base/index'; */
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
