--- a/lib/total_recall_web/templates/layout/app.html.eex
+++ b/lib/total_recall_web/templates/layout/app.html.eex
@@ -1,3 +1,4 @@
+<%= render TotalRecallWeb.SharedView, "_navbar.html", assigns %>
 <main role="main" class="container">
   <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
   <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
