--- a/lib/total_recall_web/templates/layout/live.html.leex
+++ b/lib/total_recall_web/templates/layout/live.html.leex
@@ -1,3 +1,4 @@
+<%= render "navbar_live.html", assigns %>
 <main role="main" class="container">
   <p class="alert alert-info" role="alert"
     phx-click="lv:clear-flash"
