--- a/lib/total_recall_web/templates/layout/navbar_live.html.leex
+++ b/lib/total_recall_web/templates/layout/navbar_live.html.leex
@@ -34,7 +34,7 @@
         <div class="hidden sm:block sm:ml-6">
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <%= live_redirect "Dashboard", to: Routes.user_dashboard_path(@socket, :new), class: "bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" %>
+            <%= live_redirect "Dashboard", to: Routes.user_dashboard_path(@socket, :show), class: "bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" %>
             <%#= live_redirect "Room", to: Routes.new_room_path(@socket, :new), class: "text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium" %>
             <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Projects</a>
             <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Calendar</a>
